--- a/index.html
+++ b/index.html
@@ -6,16 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
+    </style>
   </head>
   <body>
     <header class="header">
       <div><img src="/assets/logo.png" alt="Logo" /></div>
-      <div class="header__navbar__wrapper">
+      <div class="navbar">
         <div>Jane Doe</div>
         <div>Tell us about yourself</div>
         <div>Slider</div>
       </div>
     </header>
+    <section>
+      <div class="user-card">
+        <div class="user-avatar">
+          <img src="assets/avatar.png" alt="avatar" />
+        </div>
+        <div class="user-info">
+          <div class="user-name">Jane Doe</div>
+          <div class="user-additional-info">
+            <p><span>Date of birth</span> 21.04.2001</p>
+            <p><span>Gender</span> Female</p>
+            <p><span>Country</span> Corea</p>
+          </div>
+          <div class="user-text-header">About me</div>
+          <div class="user-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+            </p>
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="main.js"></script>
 </html>
