--- a/index.html
+++ b/index.html
@@ -129,6 +129,34 @@
         </div>
       </form>
     </section>
+    <section>
+      <div class="slider">
+        <div class="slider-content">
+          <div class="slider-images-block">
+            <div class="slider-image transit showen"><img src="assets/slider.png" alt=""></div>
+            <div class="slider-image transit"><img src="assets/slider1.jpg" alt=""></div>
+            <div class="slider-image transit"><img src="assets/slider2.jpg" alt=""></div>
+          </div>
+          <div class="slider-control-buttons">
+            <label class="left" for="left-slider-button"></label>
+            <button id="left-slider-button"></button>
+            <label class="right" for="right-slider-button"></label>
+            <button id="right-slider-button"></button>
+          </div>
+          <div class="dots-block">
+            <div class="active-dot"></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="slider-text-block">
+            <div class="slider-header-text">Slide this photo</div>
+            <div class="slider-additional-text">
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script type="module" src="main.js"></script>
 </html>
