--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
         <div class="form-additional-info hidden">
           <div>
             <label for="form-country">Your country</label>
-            <input id="form-country" type="text" placeholder="Where are you from?" />
+            <input tabindex="-1" id="form-country" type="text" placeholder="Where are you from?" />
           </div>
           <div>
             <label for="form-city">Your City</label>
-            <input id="form-city" type="text" placeholder="Your native city" />
+            <input tabindex="-1" id="form-city" type="text" placeholder="Your native city" />
           </div>
           <div>
             <label for="form-date">Your date of birth</label>
-            <input id="form-date" type="date" placeholder="dd.mm.yyyy" />
+            <input tabindex="-1" id="form-date" type="date" placeholder="dd.mm.yyyy" />
           </div>
         </div>
         <div class="file-upload-block hidden">
