add validation and some fixes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </section>
     <section>
-      <form class="form" action="/" method="get">
+      <form class="form" id="user-form" action="/" method="get">
           <div>
             <div class="form-small-square right-side"></div>
             <div class="form-middle-square right-side"></div>
