add links and a bit refactoring

--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
     </style>
+
   </head>
   <body>
     <header class="header">
       <div><img src="assets/logo.png" alt="Logo" /></div>
       <div class="navbar">
-        <!-- TODO: add links -->
-        <div>Jane Doe</div>
-        <div>Tell us about yourself</div>
-        <div>Slider</div>
+        <div><a href="#">Jane Doe</a></div>
+        <div><a href="#userForm">Tell us about yourself</a></div>
+        <div><a href="#sliderBlock">Slider</a></div>
       </div>
     </header>
     <section>
@@ -94,7 +96,7 @@
         </div>
         <div class="file-upload-block hidden">
           <label class="custom-file-upload" for="fileUpload"></label>
-          <input id="fileUpload" accept="image/*" type="file" value=""/>
+          <input id="fileUpload" accept="image/*" type="file"/>
           <div class="custom-upload-text">
             Proof your identity with some documents
             <div>Add document</div>
@@ -131,7 +133,7 @@
       </form>
     </section>
     <section>
-      <div class="slider">
+      <div id="sliderBlock" class="slider">
         <div class="slider-content">
           <div class="slider-images-block">
             <div class="slider-image transit showen"><img src="assets/slider.png" alt=""></div>
