add drag and drop text

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
         <div class="file-upload-block hidden">
           <label class="custom-file-upload" for="fileUpload"></label>
           <input id="fileUpload" accept="image/*" type="file"/>
-          <div class="custom-upload-text">
-            Proof your identity with some documents
-            <div>Add document</div>
+          <div class="custom-upload-infoblock">
+            <div class="drop-text">Drop file in this area</div>
+            <div class="custom-upload-text">Proof your identity with some documents</div>
+            <div class="custom-upload-button">Add document</div>
           </div>
           <div id="filePreview" class="preview hidden">
             <img id="previewImg" src="assets/avatar.png" alt="preview image" />
