some cross browser fix

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="form-main-info">
           <div>
             <label for="formUsername">Your name</label
-            ><input id="formUsername" type="text" placeholder="Tell us your name" />
+            ><input id="formUsername" type="text" autocomplete="off" placeholder="Tell us your name" />
           </div>
           <div>
             <label for="formUserGender">
@@ -80,14 +80,14 @@
             </div>
           </div>
         </div>
-        <div class="form-additional-info hidden">
+        <div class="form-additional-info">
           <div>
             <label for="formCountry">Your country</label>
-            <input tabindex="-1" id="formCountry" type="text" placeholder="Where are you from?" />
+            <input tabindex="-1" id="formCountry" type="text" autocomplete="off" placeholder="Where are you from?" />
           </div>
           <div>
             <label for="formCity">Your City</label>
-            <input tabindex="-1" id="formCity" type="text" placeholder="Your native city" />
+            <input tabindex="-1" id="formCity" type="text" autocomplete="off" placeholder="Your native city" />
           </div>
           <div>
             <label for="formDate">Your date of birth</label>
