--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
       <div id="sliderBlock" class="slider">
         <div class="slider-content">
           <div class="slider-images-block">
-            <div class="slider-image transit showen"><img src="assets/slider.png" alt=""></div>
-            <div class="slider-image transit"><img src="assets/slider1.jpg" alt=""></div>
-            <div class="slider-image transit"><img src="assets/slider2.jpg" alt=""></div>
+            <div class="slider-image "><img src="assets/slider.png" alt=""></div>
+            <div class="slider-image "><img src="assets/slider1.jpg" alt=""></div>
+            <div class="slider-image "><img src="assets/slider2.jpg" alt=""></div>
           </div>
           <div class="slider-control-buttons">
             <label class="left" for="leftSliderButton"></label>
