fix dots and small device screen carousel + some bug fixes

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
       <div id="sliderBlock" class="slider">
         <div class="slider-content">
           <div class="slider-images-block">
-            <div class="slider-image "><img src="assets/slider.png" alt=""></div>
-            <div class="slider-image "><img src="assets/slider1.jpg" alt=""></div>
-            <div class="slider-image "><img src="assets/slider2.jpg" alt=""></div>
+            <div class="slider-image "><img src="assets/slider.png" alt="sea"></div>
+            <div class="slider-image "><img src="assets/slider1.jpg" alt="mountains"></div>
+            <div class="slider-image "><img src="assets/slider2.jpg" alt="desert"></div>
           </div>
           <div class="slider-control-buttons">
             <label class="left" for="leftSliderButton"></label>
@@ -148,9 +148,7 @@
             <button id="rightSliderButton"></button>
           </div>
           <div class="dots-block">
-            <div class="active-dot"></div>
-            <div></div>
-            <div></div>
+            
           </div>
           <div class="slider-text-block">
             <div class="slider-header-text">Slide this photo</div>
