change date input to custom text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
           </div>
         </div>
-        <div class="form-additional-info">
+        <div class="form-additional-info hidden">
           <div>
             <label for="formCountry">Your country</label>
             <input tabindex="-1" id="formCountry" type="text" autocomplete="off" placeholder="Where are you from?" />
@@ -91,7 +91,7 @@
           </div>
           <div>
             <label for="formDate">Your date of birth</label>
-            <input tabindex="-1" id="formDate" type="date" placeholder="dd.mm.yyyy" />
+            <input tabindex="-1" id="formDate" type="text" placeholder="dd.mm.yyyy" maxlength="10" autocomplete="off" />
           </div>
         </div>
         <div class="file-upload-block hidden">
@@ -148,7 +148,7 @@
             <button id="rightSliderButton"></button>
           </div>
           <div class="dots-block">
-            
+
           </div>
           <div class="slider-text-block">
             <div class="slider-header-text">Slide this photo</div>
